@@ -5,11 +5,11 @@ import book.chat.club.dto.ClubDTO;
 import book.chat.club.dto.ClubMakingForm;
 import book.chat.club.entity.Club;
 import book.chat.club.entity.ClubRepository;
-import book.chat.member.service.MemberService;
-import book.chat.member.entity.Member;
-import book.chat.member.entity.MemberRepository;
 import book.chat.common.dto.BookDTO;
 import book.chat.member.dto.MemberDTO;
+import book.chat.member.entity.Member;
+import book.chat.member.entity.MemberRepository;
+import book.chat.member.service.MemberService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -53,13 +53,29 @@ public class ClubService {
     }
 
     public List<BookDTO> findReadBooksLimit10(List<String> bookList) {
-        if(bookList.size() == 0){
+        if (bookList.size() == 0) {
             return null;
         }
-        return bookList.stream()
-                .map(isbn -> bookSearchAPI.bookSearch(isbn).get(0))
+        List<BookDTO> books = bookList.stream()
+                .map(isbn -> {
+                    try{
+                       return bookSearchAPI.bookSearch(isbn).get(0);
+                    }catch (IndexOutOfBoundsException ex){
+                        return BookDTO.builder()
+                                .author("알 수 없는 작가")
+                                .image("/free-icon-book-828370.png")
+                                .name("알수 없음")
+                                .isbn(isbn)
+                                .description("없음")
+                                .shoppingLink("없음")
+                                .publisher("없음")
+                                .publishDate(null)
+                                .build();
+                    }
+                })
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
+        return books;
     }
 
     public List<ClubDTO> transferToDtoList(List<Club> entities) {
@@ -69,13 +85,13 @@ public class ClubService {
     }
 
     @Transactional
-    public ClubDTO updateClubInfo(ClubDTO clubDTO){
+    public ClubDTO updateClubInfo(ClubDTO clubDTO) {
         clubRepository.save(new Club(clubDTO));
         return clubDTO;
     }
 
     @Transactional
-    public void joinMember(MemberDTO member, Long clubNo){
+    public void joinMember(MemberDTO member, Long clubNo) {
         ClubDTO club = findClubByNo(clubNo);
         club.getMembers().add(member.getNo());
         MemberDTO newMember = memberService.findByNo(member.getNo());
